# fastapi-todo-api

./: pyproject.toml
fastapi_todo_api/: app.py
