[tool.poetry]
name = "fastapi-todo-api"
version = "0.1.0"
description = ""
authors = ["Felipe Sanchez <f.sanxz@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_todo_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "fastapi_todo_api.app:start"
